# Machine-Learning

./: MainWindow.ui  project_retail.rar  pyproject.toml
Buổi 4/: Ex 49.rar  TestMySQL.py
Buổi 4/Ex 49/: MainWindow.py  MainWindow.ui  MainWindowEx.py
LinearRegression/: ExcelMultiR.xlsx  LinearRegression2.py  LinearRegressionExcel.xlsx  LinearRegressionPython.py  MLLinearRegression2.py
Web_HousePricePrediction/: FileUtil.py
Web_HousePricePrediction/templates/: index.html
house_price_prediction/: DataSetViewer.py  DropdownList.py  UIPrediction.py  house_price_prediction.ipynb  run_pyqt.py
house_price_prediction/pyqt/: MainWindow.py  MainWindow.ui  MainWindowEx.py  main.py
house_price_prediction/web/: app.py
house_price_prediction/web/templates/: index.html
project_retail/: __init__.py
project_retail/connectors/: connector.py
project_retail/models/: customer.py
project_retail/tests/: customer_cluster_analysis.py  test_salesdatabase.py
