[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.setuptools]
packages = ["project_retail", "project_retail.connectors", "project_retail.models", "project_retail.ui"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
